[gd_scene load_steps=8 format=3 uid="uid://df0o18m0nulpg"]

[ext_resource type="Script" uid="uid://d103umv02mk33" path="res://Scenes/UI/GameUI/GameUi.gd" id="1_if2le"]
[ext_resource type="LabelSettings" uid="uid://cvnv7cd5yp73u" path="res://Resources/Fonts/lucki_red_42.tres" id="2_gdmg3"]
[ext_resource type="LabelSettings" uid="uid://d27sr4a2hqyse" path="res://Resources/Fonts/lucki_white_42.tres" id="3_j5s31"]
[ext_resource type="AudioStream" uid="uid://baivvttjf2uur" path="res://Assets/audio/score.wav" id="4_gdmg3"]

[sub_resource type="Animation" id="Animation_gdmg3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PressSpaceLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_if2le"]
resource_name = "flashing_label"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PressSpaceLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.49019608)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j5s31"]
_data = {
&"RESET": SubResource("Animation_gdmg3"),
&"flashing_label": SubResource("Animation_if2le")
}

[node name="Game UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_if2le")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0000"
label_settings = ExtResource("2_gdmg3")

[node name="GameOverLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over!"
label_settings = ExtResource("2_gdmg3")

[node name="PressSpaceLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Press Space"
label_settings = ExtResource("3_j5s31")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j5s31")
}
autoplay = "flashing_label"

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gdmg3")
volume_db = -20.0

[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
